# az2h-rust

./: README.md
.github/workflows/: rust-bill-manager.yml  rust.yml
bill-manager/: Cargo.toml  README.md
bill-manager/.github/workflows/: ci.yml
bill-manager/src/: main.rs
