[package]
name = "bill-manager"
version = "0.1.0"
edition = "2024"
authors = ["Stefan Dragan <stefan.m.dragan@gmail.com>"]
description = "A small bill manager CLI"
license = "MIT OR Apache-2.0"
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "bill-manager"
path = "src/main.rs"